--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,17 @@
-<!--TODO-->
-<!--As good coding practice add all color themes you use thoughout the project in this file -->
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#8800FF00</color>
+
+    <!-- App specific colors -->
+    <color name="background_dark">#423E3E</color>
+    <color name="search_background">#333333</color>
+    <color name="card_background">#333333</color>
+    <color name="item_background">#444444</color>
+    <color name="text_primary">#E5CECE</color>
+    <color name="text_secondary">#B3FFFFFF</color> <!-- 70% white -->
+    <color name="white_70">#B3FFFFFF</color> <!-- 70% white -->
+    <color name="accent">#4ECDC4</color>
+    <color name="error">#F44336</color>
 </resources>
